trunk/Archive2/fa/35a6d3426889a0/output
main.cpp: In function 'int main()':
main.cpp:24:49: error: expected primary-expression before ')' token
     _flashData appData, flashData = (flashData *)0x01040;
                                                 ^
main.cpp:24:16: warning: unused variable 'appData' [-Wunused-variable]
     _flashData appData, flashData = (flashData *)0x01040;
                ^
